--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "slim/twig-view": "^2.1",
     "twig/twig": "^1.24",
     "php": "^7.0",
-    "cebe/markdown": "^1.1"
+    "cebe/markdown": "^1.1",
+    "doctrine/orm": "^2.5",
+    "monolog/monolog": "^1.21"
   },
   "autoload": {
     "psr-4": {
