--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,16 @@
   "name": "dsmithhayes/southriversharpening",
   "description": "The South River Sharpening Website",
   "require": {
+    "php": "^7.0",
     "slim/slim": "^3.5",
     "slim/twig-view": "^2.1",
     "twig/twig": "^1.24",
-    "php": "^7.0",
     "cebe/markdown": "^1.1",
-    "doctrine/orm": "^2.5",
-    "monolog/monolog": "^1.21"
+    "monolog/monolog": "^1.21",
+    "symfony/yaml": "^3.1"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^5.5"
   },
   "autoload": {
     "psr-4": {
@@ -20,8 +23,5 @@
       "name": "Dave Smith-Hayes",
       "email": "me@davesmithhayes.com"
     }
-  ],
-  "require-dev": {
-    "phpunit/phpunit": "^5.5"
-  }
+  ]
 }
