--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
     "twig/twig": "^1.24",
     "cebe/markdown": "^1.1",
     "monolog/monolog": "^1.21",
-    "symfony/yaml": "^3.1"
+    "symfony/yaml": "^3.1",
+    "dsmithhayes/extended": "^0.5.0",
+    "ext-imagick": "^3.4@RC"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
