--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "southriversharpening",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Website for South River Sharpening",
   "private": true,
   "author": {
@@ -12,14 +12,12 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.4",
     "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.5.3",
-    "bootstrap-sass": "^3.3.7",
-    "webpack": "^1.13.2",
-    "webpack-stream": "3.2.0",
-    "fancybox": "^3.0.0"
+    "node-libs-browser": "^2.0.0"
   }
 }
