--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "symfony/yaml": "^3.1",
     "dsmithhayes/extended": "^0.5.0",
     "ext-imagick": "^3.4@RC",
-    "fpdo/fluentpdo": "^1.1"
+    "fpdo/fluentpdo": "^1.1",
+    "firebase/php-jwt": "^4.0",
+    "tuupola/slim-jwt-auth": "^2.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
