--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "ext-imagick": "^3.4@RC",
     "fpdo/fluentpdo": "^1.1",
     "firebase/php-jwt": "^4.0",
-    "tuupola/slim-jwt-auth": "^2.3"
+    "tuupola/slim-jwt-auth": "^2.3",
+    "cakephp/orm": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
